--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sight-unseen-access</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="sight" />
+    <meta name="author" content="sight" />
 
     <meta property="og:title" content="sight-unseen-access" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Sight" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://cdn.shopify.com/s/files/1/0298/3968/7725/files/Sight-Treasure-Trails-b-c-1024x1024.jpg?v=1615483615" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:card" content="" />
+    <meta name="twitter:site" content="sight" />
+    <meta name="twitter:image" content="https://cdn.shopify.com/s/files/1/0298/3968/7725/files/Sight-Treasure-Trails-b-c-1024x1024.jpg?v=1615483615" />
   </head>
 
   <body>
