--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="sight" />
     <meta name="author" content="sight" />
 
-    <link rel="icon" href="/lovable-uploads/f8a483a2-98ae-4cbb-b3a4-7385731923d4.png" type="image/png">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
 
     <meta property="og:title" content="sight-unseen-access" />
     <meta property="og:description" content="Sight" />
